[package]
name = "winstt"
version = "0.1.3-alpha.2"
description = "WinSTT — local-first speech-to-text"
authors = ["WinSTT contributors"]
edition = "2021"
license = "MIT"
default-run = "winstt"

[profile.dev]
incremental = true # Compile your binary in smaller steps.
# Smaller debug info dramatically cuts MSVC link time (full PDB generation
# dominates the link of ~1100 static deps + WebView2). "line-tables-only" keeps
# panic/backtrace line numbers but drops the heavy variable/type info you only
# need under a step debugger. Pairs with the lld-link linker in /.cargo/config.toml.
debug = "line-tables-only"

# Optimize DEPENDENCIES only — our own `winstt` crate stays at opt-level 0 so
# incremental leaf rebuilds stay fast. Without this, debug-level numeric crates
# (ort / ndarray / rustfft / symphonia / whisper) make dev-mode RUNTIME crawl.
# Deps are cached after the first build, so this does NOT slow incremental
# rebuilds; it only costs a one-time recompile the first time it's enabled.
[profile.dev.package."*"]
opt-level = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "winstt_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Opt-in execution providers for the ONNX STT engine. The shipped Windows build is DirectML.
# Non-Windows GPU EPs are native-runner features; the resolver only selects them on
# matching targets and otherwise uses CPU.
cuda = ["ort/cuda"]
coreml = ["ort/coreml"]
rocm = ["ort/rocm"]
openvino = ["ort/openvino"]
webgpu = ["ort/webgpu"]
# Keep WebView devtools out of default/release builds; enable with
# `cargo tauri dev --features devtools` when inspection is needed.
devtools = ["tauri/devtools"]
# DEBUG-ONLY context-awareness extras (`commands::context::debug_read_context` and the live
# playground IPC commands); mirrors CONTEXT_PLAYGROUND_ENABLED in the reference build.
# Off in shipped builds.
context-playground = []

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dependencies]
once_cell = "1"
tauri = { version = "2.11.2", features = [
  "protocol-asset",
  "macos-private-api",
  "tray-icon",
  'image-png',
] }
tauri-plugin-log = "2.7.1"
tauri-plugin-opener = "2.5.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-macos-permissions = "2.3.0"
rusqlite_migration = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
cpal = "0.17.1"
anyhow = "1.0.95"
rubato = "0.16.2"
# Real RAM detection for the model-download fitness heuristics (the "RAM: unknown"
# fix). Already in the dep graph transitively; pinned to the same version.
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
hound = "3.5.1"
log = "0.4.25"
env_filter = "0.1.0"
tokio = "1.43.0"
# Awaitable, latching cancellation for racing in-flight reqwest/genai futures
# (cloud LLM/STT/TTS abort). Already in the tree transitively; `rt` gates the
# `sync::CancellationToken` we use. Dropping the raced future aborts the request.
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
vad-rs = { git = "https://github.com/cjpais/vad-rs", rev = "2a412ed858695b9251f3f5a1a20d95b59fa7c498", default-features = false }
enigo = "0.6.1"
rodio = "0.22.2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "stream", "multipart", "rustls"] }
futures-util = "0.3"
# Multi-provider cloud LLM transport (OpenAI/OpenRouter/Anthropic-native/Groq/Z.AI/Bedrock/…).
# Replaces the hand-rolled OpenAI-compat client for the CLOUD post-process + dictation/transform
# paths; local Ollama keeps its native REST client (genai's Ollama adapter can't express
# keep_alive / the `think` knob / the native `format` schema). Pins reqwest 0.13 (unifies with
# ours), tokio 1, NO ort dep. rustls-tls forwards to reqwest/rustls (the feature we already use).
genai = { version = "0.6.5", default-features = false, features = ["rustls-tls"] }
rustfft = "6.4.0"
strsim = "0.11.0"
regex = "1"
unicode-normalization = "0.1"
chrono = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
tar = "0.4.44"
flate2 = "1.0"
bzip2 = "0.4.4"
sha2 = "0.10"
# WinSTT unified ONNX STT engine.
ort = { version = "=2.0.0-rc.12", features = ["ndarray", "half"] }
ndarray = "0.17.2"
num_cpus = "1"  # physical-core count for the STT intra-op thread pick (matches onnx-asr's default)
rayon = "1"     # parallel per-frame fbank/mel feature extraction (long-audio throughput)
thiserror = "2"
# WinSTT port subsystem deps.
hf-hub = "1.0.0-rc.1"            # HF snapshot resolver for STT model files (resolver/download)
globset = "0.4.18"               # STT resolver POSIX glob matching (`**`, `*`, `?`) without custom recursion
prost = "0.13"                   # ONNX-proto edit for the fp16 decoder patch (03_stt_engine.md §6.1)
tokenizers = { version = "0.22.1", default-features = false, features = ["onig"] }  # DistilBERT + custom models
sentencepiece-rs = "0.2.2"        # Pure-Rust SentencePiece `.model` reader for sherpa KWS keyword tokenization
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }        # diag bundle
symphonia = { version = "0.6.0", default-features = false, features = ["wav", "pcm", "adpcm", "mp3", "isomp4", "aac", "flac", "ogg", "vorbis"] }  # file-transcribe decode
base85 = "2.0.0"                 # Whisper alignment-heads table (RFC1924)
base64 = "0.22"                  # base64-encode the WAV body for OpenRouter's JSON /audio/transcriptions endpoint
half = "2"                       # f16 tensor element type (matches ort's half)
# sherpa-onnx ships only /MT (static-CRT) Windows libs; the `static` default clashes with Rust's /MD
# CRT (LNK2038/LNK2005). Use `shared` → link sherpa-onnx as a DLL so its /MT CRT stays isolated.
# Ship sherpa-onnx.dll alongside the exe (it lands in target/<profile>/ via the build).
sherpa-onnx = { version = "1.13.2", default-features = false, features = ["shared"] }  # KWS wake word
# TTS: kokoroxide DROPPED (pins yanked ort ^1.16, conflicts with our ort 2.0.0-rc.12).
# Instead we run the Kokoro-82M ONNX on OUR ort 2.0.0-rc.12 + an espeak-ng phonemizer
# (same runtime as STT; WinSTT is open-source so espeak-ng GPL-v3 is fine).
ferrous-opencc = "0.2.3"
# TTS G2P: in-process espeak-ng phonemizer. We dlopen the espeak-ng shared lib
# (espeak-ng.dll on Windows) and call espeak_TextToPhonemes directly — the SAME
# path the reference app's `phonemizer`/`espeakng_loader` takes via ctypes — so
# there is NO per-sentence subprocess spawn (the CLI shell-out was slower on
# short sentences). Already in the dep graph (transitive); pinned direct.
libloading = "0.8"
clap = { version = "4", features = ["derive"] }
specta = { version = "=2.0.0-rc.22", features = ["serde_json"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-dialog = "2.6"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-updater = "2.10.0"

[target.'cfg(windows)'.dependencies]
ort = { version = "=2.0.0-rc.12", features = ["directml"] }
wasapi = "0.23.0"  # WASAPI loopback capture for listen mode
windows-core = "0.61.2"
windows = { version = "0.61.3", features = [
  "Win32_Media_Audio_Endpoints",
  "Win32_Media_Audio",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Com",
  "Win32_System_Variant",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_System_Power",
  "Win32_System_SystemServices",
  "Win32_System_LibraryLoader",
  "Win32_Security_Cryptography",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  # UIA reader for the native `winstt_context` sidecar bin (IUIAutomation,
  # TextPattern, ValuePattern, TreeWalker, control-type IDs).
  "Win32_UI_Accessibility",
  "Win32_Graphics_Dxgi",
  "Win32_System_Console",
] }
winreg = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
objc2-core-audio = { version = "0.3.1", default-features = false, features = ["std", "AudioHardware"] }

[dev-dependencies]
tempfile = "3"

# Lint policy (rust-best-practices ch.2 §2.5). Plain `cargo check` and
# `cargo clippy` should be warning-clean without depending on CI-only flags.
# Pedantic/nursery are intentionally not enabled: they would turn broad API and
# style preferences into hard errors across this Tauri command surface.
[lints.rust]
warnings = "deny"
future-incompatible = "deny"
nonstandard-style = "deny"
rust-2018-idioms = "deny"
unused = "deny"
unsafe-op-in-unsafe-fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
clone_on_copy = "deny"
large_enum_variant = "deny"
manual_ok_or = "deny"
map_unwrap_or = "deny"
needless_collect = "deny"
redundant_clone = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "unwind"
